# FasrapiwithHAFSAeCG

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  Test_ECGtizer.ipynb  app.py  ecgtizer_env.yml  index.html  pyproject.toml  render.yaml  result.xml  result2.xml  server.py
